<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	>

	<group
		android:id="@+id/group_common"
		>
		<item
			android:id="@+id/item_details"
			android:icon="@drawable/baseline_person_24"
			android:title="@string/item_details"
			/>

		<item
			android:id="@+id/item_orders"
			android:icon="@drawable/baseline_book_24"
			android:title="@string/item_orders"
			/>
	</group>

	<group
		android:id="@+id/group_consumer"
		>

		<item
			android:id="@+id/item_favourites"
			android:icon="@drawable/baseline_star_24"
			android:title="@string/item_favourites"
			/>

	</group>

	<group
		android:id="@+id/group_seller"
		>

		<item
			android:id="@+id/item_my_products"
			android:icon="@drawable/baseline_storefront_24"
			android:title="@string/item_my_products"
			/>

	</group>

	<group
		android:id="@+id/group_common_2"
		>

		<item
			android:id="@+id/item_log_out"
			android:title="@string/item_log_out"
			/>

	</group>
</menu>