<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/product_background">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/product_image"
        android:src="@drawable/ic_action_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/produit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:scrollHorizontally="false"
        app:layout_constraintHorizontal_bias="0.0"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/product_info_origin_country"
        app:layout_constraintEnd_toStartOf="@+id/isOrganic"
        app:layout_constraintStart_toStartOf="@+id/product_info_price"
        app:layout_constraintTop_toBottomOf="@+id/product_info_price"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/product_info_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:text="@string/price_placeholder"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/product_info_name"
        app:layout_constraintTop_toBottomOf="@+id/product_info_name" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/currency_placeholder"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/product_info_price"
        app:layout_constraintTop_toTopOf="@+id/product_info_price" />

    <TextView
        android:id="@+id/product_info_origin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/country_title"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/product_info_name" />

    <TextView
        android:id="@+id/product_info_origin_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/country_placeholder"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_info_origin_title" />

    <ImageView
        android:id="@+id/isOrganic"
        android:layout_width="21dp"
        android:layout_height="31dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/label_bio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/bio" />

</androidx.constraintlayout.widget.ConstraintLayout>