<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	tools:context=".UserActivity">

	<ImageView
		android:id="@+id/img_user"
		android:layout_width="wrap_content"
		android:layout_height="250dp"
		android:contentDescription="@string/content_description"
		android:src="@mipmap/avatar_person"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/txt_user_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:text="Inscrit le 01/01/2021"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/img_user"
		tools:ignore="HardcodedText"
		/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_edit_profile"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:text="@string/btn_edit_profile"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt_user_description"
		/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_payment_addresses"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/btn_payment_addresses"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>